remove Mitsuba serialized loader from engine (was wrongly added by @Anastazluk)

--- a/source/Irrlicht/CMakeLists.txt
+++ b/source/Irrlicht/CMakeLists.txt
@@ -37,8 +37,6 @@ include(common)
 #[[ Loaders and writers compile options available to edit by user
 	All revelant _IRR_COMPILE_WITH will be there]]
 option(_IRR_COMPILE_WITH_MTL_LOADER_ "Compile with MTL Loader" ON)
-option(_IRR_COMPILE_WITH_MITSUBA_SERIALIZED_LOADER_ "Compile with Mitsuba Serialized Loader" ON)
-#option(_IRR_COMPILE_WITH_MITSUBA_SERIALIZED_WRITER_ "Compile with Mitsuba Serialized Writer" ON) uncomment when writer exists
 option(_IRR_COMPILE_WITH_OBJ_LOADER_ "Compile with OBJ Loader" ON)
 #option(_IRR_COMPILE_WITH_OBJ_WRITER_ "Compile with OBJ Writer" ON) uncomment when writer exists
 option(_IRR_COMPILE_WITH_STL_LOADER_ "Compile with STL Loader" ON)
@@ -103,7 +101,6 @@ set(IRRLICHT_SRCS_COMMON
 	${IRR_ROOT_PATH}/src/irr/asset/format/convertColor.cpp
 
 # Mesh loaders
-	${IRR_ROOT_PATH}/ext/MitsubaLoader/CSerializedLoader.cpp
 	${IRR_ROOT_PATH}/src/irr/asset/CBAWMeshFileLoader.cpp
 	${IRR_ROOT_PATH}/src/irr/asset/COBJMeshFileLoader.cpp
 	${IRR_ROOT_PATH}/src/irr/asset/CPLYMeshFileLoader.cpp
@@ -397,7 +394,7 @@ else()
 endif()
 
 target_compile_definitions(Irrlicht 
-	PRIVATE	_IRR_STATIC_LIB_
+	PRIVATE	_IRR_STATIC_LIB_ SPIRV_CROSS_EXCEPTIONS_TO_ASSERTIONS
 	PUBLIC	UNW_LOCAL_ONLY
 )
 
@@ -449,6 +446,7 @@ target_include_directories(IrrlichtServer PRIVATE ${IRR_ROOT_PATH}/src ${IRR_ROO
 target_compile_definitions(IrrlichtServer PRIVATE
 	_IRR_STATIC_LIB_
 	_IRR_SERVER_
+	SPIRV_CROSS_EXCEPTIONS_TO_ASSERTIONS
 )
 
 
