--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -50,14 +50,20 @@ set(SKIP_INSTALL_ALL ${_OLD_SKIP_INSTALL_ALL})
 set(BUILD_SHARED_LIBS ${_OLD_BUILD_SHARED_LIBS})
 get_target_property(ZLIB_BINARY_DIR zlibstatic "BINARY_DIR")
 if (MSVC)
+	set(ZLIB_BINARY_DIR_DEBUG "${ZLIB_BINARY_DIR}/Debug")
+	set(ZLIB_BINARY_DIR_RELEASE "${ZLIB_BINARY_DIR}/Release")
 	get_target_property(ZLIB_NAME zlibstatic "NAME")
+	set(ZLIB_DEBUG_POSTFIX "d") # zlib's cmake is a zjeb
 else()
+	set(ZLIB_BINARY_DIR_DEBUG ${ZLIB_BINARY_DIR})
+	set(ZLIB_BINARY_DIR_RELEASE ${ZLIB_BINARY_DIR})
 	get_target_property(ZLIB_NAME zlibstatic "OUTPUT_NAME")
+	set(ZLIB_DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
 endif()
 get_target_property(ZLIB_DEBUG_POSTFIX zlibstatic "DEBUG_POSTFIX")
 set(ZLIB_INCLUDE_DIR "${THIRD_PARTY_SOURCE_DIR}/zlib;${THIRD_PARTY_BINARY_DIR}/zlib" CACHE STRING "" FORCE)
-set(ZLIB_LIBRARY_DEBUG "${ZLIB_BINARY_DIR}/${CMAKE_STATIC_LIBRARY_PREFIX}${ZLIB_NAME}${CMAKE_DEBUG_POSTFIX}${CMAKE_STATIC_LIBRARY_SUFFIX}" CACHE STRING "" FORCE)
-set(ZLIB_LIBRARY_RELEASE "${ZLIB_BINARY_DIR}/${CMAKE_STATIC_LIBRARY_PREFIX}${ZLIB_NAME}${CMAKE_STATIC_LIBRARY_SUFFIX}" CACHE STRING "" FORCE)
+set(ZLIB_LIBRARY_DEBUG "${ZLIB_BINARY_DIR_DEBUG}/${CMAKE_STATIC_LIBRARY_PREFIX}${ZLIB_NAME}${ZLIB_DEBUG_POSTFIX}${CMAKE_STATIC_LIBRARY_SUFFIX}" CACHE STRING "" FORCE)
+set(ZLIB_LIBRARY_RELEASE "${ZLIB_BINARY_DIR_RELEASE}/${CMAKE_STATIC_LIBRARY_PREFIX}${ZLIB_NAME}${CMAKE_STATIC_LIBRARY_SUFFIX}" CACHE STRING "" FORCE)
 
 
 set(SPIRV_HEADERS_SKIP_EXAMPLES ON CACHE BOOL "Skip SPIRV-Headers examples")
