Making sure image pass-through works

--- a/.gitignore
+++ b/.gitignore
@@ -28,4 +28,5 @@ source/Irrlicht/libIrrlichtServer.a
 examples_tests/06.MeshLoaders/bin/cow.baw
 examples_tests/06.MeshLoaders/bin/extrusionLogo_TEST_fixed.baw
 examples_tests/07.HardwareSkinning/bin/dwarf.baw
+examples_tests/39.DenoiserTonemapper/bin/*
 
