Creating buffers from data and using them for shaders
UniqueStringLiteralType returns incorrect value in some cases, uncertain why. Some are correct. This causes an issue when retrieving filepath for disabled option to embed resources.
Second issue - generated CPP file needs to be added to Irrlich & IrrlichServer targets. Whats problematic is it being created at build time

--- a/include/irr/config/BuildConfigOptions.h.in
+++ b/include/irr/config/BuildConfigOptions.h.in
@@ -3,6 +3,9 @@
 
 #cmakedefine _IRR_DEBUG
 
+// working root directory
+#cmakedefine __IRR_ROOT_DIRECTORY__ "${CMAKE_SOURCE_DIR}"
+
 // architecture
 #cmakedefine __IRR_COMPILE_WITH_ARM_SIMD_
 
