--- a/src/irr/builtin/CMakeLists.txt
+++ b/src/irr/builtin/CMakeLists.txt
@@ -1,12 +1,8 @@
 function(irr_add_builtin_resource)
   # generate files
-
-
-
   foreach(X IN LISTS ARGV)
     list(APPEND builtin_dependencies_list  ${CMAKE_SOURCE_DIR}/include/${X})
   endforeach()
-
   add_custom_command(
     OUTPUT "${CMAKE_BINARY_DIR}/include/irr/builtin/builtinResources.h" "${CMAKE_CURRENT_BINARY_DIR}/builtinResourceData.cpp"
     COMMAND python ${CMAKE_CURRENT_SOURCE_DIR}/builtinHeaderGen.py ${CMAKE_BINARY_DIR}/include/irr/builtin/builtinResources.h ${CMAKE_SOURCE_DIR}/include "${ARGV}"
@@ -16,22 +12,25 @@ function(irr_add_builtin_resource)
     VERBATIM  
   )
 
-
 endfunction()
 
 function (set_builtin_resource_dependencies)
   # set up dependency
   add_custom_target(builtin_resources
-   DEPENDS ${CMAKE_BINARY_DIR}/include/irr/builtin/builtinResources.h ${CMAKE_CURRENT_BINARY_DIR}/builtinResourceData.cpp)
+   DEPENDS ${CMAKE_BINARY_DIR}/include/irr/builtin/builtinResources.h ${CMAKE_CURRENT_BINARY_DIR}/builtinResourceData.cpp
+   SOURCES ${CMAKE_CURRENT_BINARY_DIR}/builtinResourceData.cpp
+   )
   add_dependencies(Irrlicht builtin_resources)
+  add_dependencies(IrrlichtServer builtin_resources)
+
 endfunction()
 
+set_builtin_resource_dependencies()
 #fill this list with resource paths relative to IrrlichtBaW's source/include
-  irr_add_builtin_resource(
-    "irr/builtin/materials/lambertian/singletexture/specializedshader_vertex"
-    "irr/builtin/materials/lambertian/singletexture/specializedshader_fragment"
-    "irr/builtin/materials/lambertian/no_texture/specializedshader_vertex"
-    "irr/builtin/materials/lambertian/no_texture/specializedshader_fragment"
-  )
-
+irr_add_builtin_resource(
+  "irr/builtin/materials/lambertian/singletexture/specializedshader.vert"
+  "irr/builtin/materials/lambertian/singletexture/specializedshader.frag"
+  "irr/builtin/materials/lambertian/no_texture/specializedshader.vert"
+  "irr/builtin/materials/lambertian/no_texture/specializedshader.frag"
+)
 
