--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -232,11 +232,8 @@ add_subdirectory(${THIRD_PARTY_SOURCE_DIR})
 
 OPTION(IRR_EMBED_BUILTIN_RESOURCES "Embed built-in resources?" ON)
 
-add_subdirectory(source/Irrlicht) # Irrlicht code
 
-if(IRR_EMBED_BUILTIN_RESOURCES)
-	add_subdirectory(src/irr/builtin)
-endif()
+add_subdirectory(src/irr) # Irrlicht code	|	Moved cmakelists.txt from source/Irrlicht to src/irr
 
 
 
