--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -52,19 +52,23 @@ get_target_property(ZLIB_BINARY_DIR zlibstatic "BINARY_DIR")
 if (MSVC)
 	set(ZLIB_BINARY_DIR_DEBUG "${ZLIB_BINARY_DIR}/Debug")
 	set(ZLIB_BINARY_DIR_RELEASE "${ZLIB_BINARY_DIR}/Release")
+	set(ZLIB_BINARY_DIR_RELWITHDEBINFO "${ZLIB_BINARY_DIR}/RelWithDebInfo")
 	get_target_property(ZLIB_NAME zlibstatic "NAME")
 	set(ZLIB_DEBUG_POSTFIX "d") # zlib's cmake is a zjeb
+	set(ZLIB_RELWITHDEBINFO_POSTFIX "rwdi")
 else()
 	set(ZLIB_BINARY_DIR_DEBUG ${ZLIB_BINARY_DIR})
 	set(ZLIB_BINARY_DIR_RELEASE ${ZLIB_BINARY_DIR})
 	get_target_property(ZLIB_NAME zlibstatic "OUTPUT_NAME")
 	set(ZLIB_DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
+	set(ZLIB_RELWITHDEBINFO_POSTFIX "${CMAKE_RELWITHDEBINFO_POSTFIX}") # check it!
 endif()
 get_target_property(ZLIB_DEBUG_POSTFIX zlibstatic "DEBUG_POSTFIX")
+get_target_property(ZLIB_DEBUG_POSTFIX zlibstatic "RELWITHDEBINFO_POSTFIX")
 set(ZLIB_INCLUDE_DIR "${THIRD_PARTY_SOURCE_DIR}/zlib;${THIRD_PARTY_BINARY_DIR}/zlib" CACHE STRING "" FORCE)
 set(ZLIB_LIBRARY_DEBUG "${ZLIB_BINARY_DIR_DEBUG}/${CMAKE_STATIC_LIBRARY_PREFIX}${ZLIB_NAME}${ZLIB_DEBUG_POSTFIX}${CMAKE_STATIC_LIBRARY_SUFFIX}" CACHE STRING "" FORCE)
 set(ZLIB_LIBRARY_RELEASE "${ZLIB_BINARY_DIR_RELEASE}/${CMAKE_STATIC_LIBRARY_PREFIX}${ZLIB_NAME}${CMAKE_STATIC_LIBRARY_SUFFIX}" CACHE STRING "" FORCE)
-
+set(ZLIB_LIBRARY_RELWITHDEBINFO "${ZLIB_BINARY_DIR_RELWITHDEBINFO}/${CMAKE_STATIC_LIBRARY_PREFIX}${ZLIB_NAME}${ZLIB_RELWITHDEBINFO_POSTFIX}${CMAKE_STATIC_LIBRARY_SUFFIX}" CACHE STRING "" FORCE)
 
 set(SPIRV_HEADERS_SKIP_EXAMPLES ON CACHE BOOL "Skip SPIRV-Headers examples")
 add_subdirectory(SPIRV-Headers SPIRV-Headers EXCLUDE_FROM_ALL)
